test_suite/alan-2022-examples/passing/000014_random.alan
source R begin while EF - 8 <> 0 do C90 := 57; call Ux5S() end end
