test_suite/alan-2022-examples/failing/001830_mutation.alan
source t begin do call Y() end
